# MyGO

./: .gitignore  .mygo.yaml  INTERVIEW.md  README.md  design.md  pyproject.toml
mygo/: __init__.py  __main__.py  cli.py  config.py  context.py  diff_parser.py  formatter.py  git_workspace.py  hook.py  models.py  prompt.py
mygo/llm/: __init__.py  anthropic.py  base.py  exceptions.py  gemini.py  openai_compat.py  provider.py  reviewer.py
mygo/lsp/: __init__.py  client.py  engine.py  lang_go.py  lang_python.py  lang_typescript.py
tests/: _smoke_context.py  _smoke_prompt.py  test_cli.py  test_context.py  test_diff_parser.py  test_e2e.py  test_formatter.py  test_git_workspace.py  test_llm.py  test_lsp_client.py  test_lsp_engine.py  test_prompt.py
tests/experiment/: __init__.py  checker.py  run.py  scorer.py  spec.md
tests/experiment2/: __init__.py  run.py  spec.md  test_suite.py
tests/fixtures/: sample_go.diff  sample_python.diff  sample_typescript.diff
