[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mygo"
version = "0.1.0"
description = "AI-powered code review agent with LSP semantic analysis"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "unidiff>=0.7",
    "jinja2>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
mygo = "mygo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
